Closed Bug 1339258 Opened 7 years ago Closed 7 years ago

Windows builds are failing on the graphics branch

Categories

(Core :: Graphics: WebRender, defect)

x86
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: mchang, Assigned: mchang)

Details

Attachments

(1 file)

Can't find GPUProcessManager and Rect types on windows.
Attachment #8836907 - Flags: review?(rhunt)
Assignee: nobody → mchang
Attachment #8836907 - Flags: review?(rhunt) → review+
Pushed by mchang@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/7c8cbd22d82a
Import namespace gfx for build errors. r=rhunt
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.