Bug 1339258. Import namespace gfx for build errors. r=rhunt