gfx/layers/wr/WebRenderColorLayer.cpp
@@ -13,6 +13,8 @@
 namespace mozilla {
 namespace layers {
 
+using namespace mozilla::gfx;
+
 void
 WebRenderColorLayer::RenderLayer()
 {
